[package]
name = "tiktok-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
fantoccini = "0.19.3"
libaes = "0.6.4"
rand = "0.8.5"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "^1.25.0", features = ["macros"] }
url = "2.3.1"
